Archive2/21/e730fa9177e27b/output
main.cpp: In function 'int main()':
main.cpp:12:32: error: 'endl' was not declared in this scope
      std::cout<<a.operator*()<<endl;
                                ^
main.cpp:12:32: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/iostream:39:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
